--- a/Scraper.ipynb
+++ b/Scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_pickle(\"capstone_scraped.pkl\")"
+    "data = pd.read_pickle(\"tags_3_1_june\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -63,73 +63,43 @@
        "      <th>question_id</th>\n",
        "      <th>title</th>\n",
        "      <th>label</th>\n",
-       "      <th>answer_id</th>\n",
-       "      <th>question_text</th>\n",
-       "      <th>question_code</th>\n",
-       "      <th>answer_text</th>\n",
-       "      <th>answer_code</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>javascript</td>\n",
-       "      <td>36871635</td>\n",
-       "      <td>Drop Down Menu Fade Out</td>\n",
-       "      <td>menu</td>\n",
-       "      <td>36871918</td>\n",
-       "      <td>I've created a drop down menu. When the user h...</td>\n",
-       "      <td>animation fadeout 2s;\\n\\n@keyframes fadeout {\\...</td>\n",
-       "      <td>The trick here is to use CSS Transitions and n...</td>\n",
-       "      <td>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$ undefined\\nvisib...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>jquery</td>\n",
-       "      <td>36871635</td>\n",
-       "      <td>Drop Down Menu Fade Out</td>\n",
-       "      <td>menu</td>\n",
-       "      <td>36871918</td>\n",
-       "      <td>I've created a drop down menu. When the user h...</td>\n",
-       "      <td>animation fadeout 2s;\\n\\n@keyframes fadeout {\\...</td>\n",
-       "      <td>The trick here is to use CSS Transitions and n...</td>\n",
-       "      <td>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$ undefined\\nvisib...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>html</td>\n",
-       "      <td>36871635</td>\n",
-       "      <td>Drop Down Menu Fade Out</td>\n",
-       "      <td>menu</td>\n",
-       "      <td>36871918</td>\n",
-       "      <td>I've created a drop down menu. When the user h...</td>\n",
-       "      <td>animation fadeout 2s;\\n\\n@keyframes fadeout {\\...</td>\n",
-       "      <td>The trick here is to use CSS Transitions and n...</td>\n",
-       "      <td>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$ undefined\\nvisib...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>css</td>\n",
-       "      <td>36871635</td>\n",
-       "      <td>Drop Down Menu Fade Out</td>\n",
-       "      <td>menu</td>\n",
-       "      <td>36871918</td>\n",
-       "      <td>I've created a drop down menu. When the user h...</td>\n",
-       "      <td>animation fadeout 2s;\\n\\n@keyframes fadeout {\\...</td>\n",
-       "      <td>The trick here is to use CSS Transitions and n...</td>\n",
-       "      <td>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$ undefined\\nvisib...</td>\n",
+       "      <td>68135672</td>\n",
+       "      <td>How to create a functional javascript search bar</td>\n",
+       "      <td>search bar</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>javascript</td>\n",
-       "      <td>61619681</td>\n",
-       "      <td>Menu breaks when it shouldn&amp;#39;t</td>\n",
-       "      <td>menu</td>\n",
-       "      <td>61622039</td>\n",
-       "      <td>This question didnt give me any answers :/\\n\\n...</td>\n",
-       "      <td>// Hello there</td>\n",
-       "      <td>It's definitely screwy-looking in codepen. I g...</td>\n",
-       "      <td>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$ css\\nheader div ...</td>\n",
+       "      <td>53885245</td>\n",
+       "      <td>jQuery DataTables: hide search bar</td>\n",
+       "      <td>search bar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>jquery</td>\n",
+       "      <td>53885245</td>\n",
+       "      <td>jQuery DataTables: hide search bar</td>\n",
+       "      <td>search bar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>datatables</td>\n",
+       "      <td>53885245</td>\n",
+       "      <td>jQuery DataTables: hide search bar</td>\n",
+       "      <td>search bar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>javascript</td>\n",
+       "      <td>67985576</td>\n",
+       "      <td>How to filter table rows with search bar in Re...</td>\n",
+       "      <td>search bar</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -137,160 +107,78 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>javascript</td>\n",
-       "      <td>58814502</td>\n",
-       "      <td>https post in javascript similar to the curl w...</td>\n",
-       "      <td>header</td>\n",
-       "      <td>58815069</td>\n",
-       "      <td>I want to create HTTP POST in javascript reque...</td>\n",
-       "      <td>curl -X POST --header 'Content-Type: applicati...</td>\n",
-       "      <td>The code below should POST the required parame...</td>\n",
-       "      <td>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$ javascript\\ncons...</td>\n",
+       "      <td>33428974</td>\n",
+       "      <td>How to code a link for social media site: mobi...</td>\n",
+       "      <td>social media</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>node.js</td>\n",
-       "      <td>58814502</td>\n",
-       "      <td>https post in javascript similar to the curl w...</td>\n",
-       "      <td>header</td>\n",
-       "      <td>58815069</td>\n",
-       "      <td>I want to create HTTP POST in javascript reque...</td>\n",
-       "      <td>curl -X POST --header 'Content-Type: applicati...</td>\n",
-       "      <td>The code below should POST the required parame...</td>\n",
-       "      <td>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$ javascript\\ncons...</td>\n",
+       "      <td>jquery</td>\n",
+       "      <td>33428974</td>\n",
+       "      <td>How to code a link for social media site: mobi...</td>\n",
+       "      <td>social media</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>http</td>\n",
-       "      <td>58814502</td>\n",
-       "      <td>https post in javascript similar to the curl w...</td>\n",
-       "      <td>header</td>\n",
-       "      <td>58815069</td>\n",
-       "      <td>I want to create HTTP POST in javascript reque...</td>\n",
-       "      <td>curl -X POST --header 'Content-Type: applicati...</td>\n",
-       "      <td>The code below should POST the required parame...</td>\n",
-       "      <td>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$ javascript\\ncons...</td>\n",
+       "      <td>html</td>\n",
+       "      <td>33428974</td>\n",
+       "      <td>How to code a link for social media site: mobi...</td>\n",
+       "      <td>social media</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>post</td>\n",
-       "      <td>58814502</td>\n",
-       "      <td>https post in javascript similar to the curl w...</td>\n",
-       "      <td>header</td>\n",
-       "      <td>58815069</td>\n",
-       "      <td>I want to create HTTP POST in javascript reque...</td>\n",
-       "      <td>curl -X POST --header 'Content-Type: applicati...</td>\n",
-       "      <td>The code below should POST the required parame...</td>\n",
-       "      <td>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$ javascript\\ncons...</td>\n",
+       "      <td>url</td>\n",
+       "      <td>33428974</td>\n",
+       "      <td>How to code a link for social media site: mobi...</td>\n",
+       "      <td>social media</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>npm</td>\n",
-       "      <td>58814502</td>\n",
-       "      <td>https post in javascript similar to the curl w...</td>\n",
-       "      <td>header</td>\n",
-       "      <td>58815069</td>\n",
-       "      <td>I want to create HTTP POST in javascript reque...</td>\n",
-       "      <td>curl -X POST --header 'Content-Type: applicati...</td>\n",
-       "      <td>The code below should POST the required parame...</td>\n",
-       "      <td>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$ javascript\\ncons...</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>33428974</td>\n",
+       "      <td>How to code a link for social media site: mobi...</td>\n",
+       "      <td>social media</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>119320 rows × 9 columns</p>\n",
+       "<p>5055 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "          tags  question_id  \\\n",
-       "0   javascript     36871635   \n",
-       "1       jquery     36871635   \n",
-       "2         html     36871635   \n",
-       "3          css     36871635   \n",
-       "0   javascript     61619681   \n",
+       "0   javascript     68135672   \n",
+       "0   javascript     53885245   \n",
+       "1       jquery     53885245   \n",
+       "2   datatables     53885245   \n",
+       "0   javascript     67985576   \n",
        "..         ...          ...   \n",
-       "0   javascript     58814502   \n",
-       "1      node.js     58814502   \n",
-       "2         http     58814502   \n",
-       "3         post     58814502   \n",
-       "4          npm     58814502   \n",
+       "0   javascript     33428974   \n",
+       "1       jquery     33428974   \n",
+       "2         html     33428974   \n",
+       "3          url     33428974   \n",
+       "4       mobile     33428974   \n",
        "\n",
-       "                                                title   label  answer_id  \\\n",
-       "0                             Drop Down Menu Fade Out    menu   36871918   \n",
-       "1                             Drop Down Menu Fade Out    menu   36871918   \n",
-       "2                             Drop Down Menu Fade Out    menu   36871918   \n",
-       "3                             Drop Down Menu Fade Out    menu   36871918   \n",
-       "0                   Menu breaks when it shouldn&#39;t    menu   61622039   \n",
-       "..                                                ...     ...        ...   \n",
-       "0   https post in javascript similar to the curl w...  header   58815069   \n",
-       "1   https post in javascript similar to the curl w...  header   58815069   \n",
-       "2   https post in javascript similar to the curl w...  header   58815069   \n",
-       "3   https post in javascript similar to the curl w...  header   58815069   \n",
-       "4   https post in javascript similar to the curl w...  header   58815069   \n",
+       "                                                title         label  \n",
+       "0    How to create a functional javascript search bar    search bar  \n",
+       "0                  jQuery DataTables: hide search bar    search bar  \n",
+       "1                  jQuery DataTables: hide search bar    search bar  \n",
+       "2                  jQuery DataTables: hide search bar    search bar  \n",
+       "0   How to filter table rows with search bar in Re...    search bar  \n",
+       "..                                                ...           ...  \n",
+       "0   How to code a link for social media site: mobi...  social media  \n",
+       "1   How to code a link for social media site: mobi...  social media  \n",
+       "2   How to code a link for social media site: mobi...  social media  \n",
+       "3   How to code a link for social media site: mobi...  social media  \n",
+       "4   How to code a link for social media site: mobi...  social media  \n",
        "\n",
-       "                                        question_text  \\\n",
-       "0   I've created a drop down menu. When the user h...   \n",
-       "1   I've created a drop down menu. When the user h...   \n",
-       "2   I've created a drop down menu. When the user h...   \n",
-       "3   I've created a drop down menu. When the user h...   \n",
-       "0   This question didnt give me any answers :/\\n\\n...   \n",
-       "..                                                ...   \n",
-       "0   I want to create HTTP POST in javascript reque...   \n",
-       "1   I want to create HTTP POST in javascript reque...   \n",
-       "2   I want to create HTTP POST in javascript reque...   \n",
-       "3   I want to create HTTP POST in javascript reque...   \n",
-       "4   I want to create HTTP POST in javascript reque...   \n",
-       "\n",
-       "                                        question_code  \\\n",
-       "0   animation fadeout 2s;\\n\\n@keyframes fadeout {\\...   \n",
-       "1   animation fadeout 2s;\\n\\n@keyframes fadeout {\\...   \n",
-       "2   animation fadeout 2s;\\n\\n@keyframes fadeout {\\...   \n",
-       "3   animation fadeout 2s;\\n\\n@keyframes fadeout {\\...   \n",
-       "0                                      // Hello there   \n",
-       "..                                                ...   \n",
-       "0   curl -X POST --header 'Content-Type: applicati...   \n",
-       "1   curl -X POST --header 'Content-Type: applicati...   \n",
-       "2   curl -X POST --header 'Content-Type: applicati...   \n",
-       "3   curl -X POST --header 'Content-Type: applicati...   \n",
-       "4   curl -X POST --header 'Content-Type: applicati...   \n",
-       "\n",
-       "                                          answer_text  \\\n",
-       "0   The trick here is to use CSS Transitions and n...   \n",
-       "1   The trick here is to use CSS Transitions and n...   \n",
-       "2   The trick here is to use CSS Transitions and n...   \n",
-       "3   The trick here is to use CSS Transitions and n...   \n",
-       "0   It's definitely screwy-looking in codepen. I g...   \n",
-       "..                                                ...   \n",
-       "0   The code below should POST the required parame...   \n",
-       "1   The code below should POST the required parame...   \n",
-       "2   The code below should POST the required parame...   \n",
-       "3   The code below should POST the required parame...   \n",
-       "4   The code below should POST the required parame...   \n",
-       "\n",
-       "                                          answer_code  \n",
-       "0   $$$$$$$$$$$$$$$$$$$$$$$$$$$$$ undefined\\nvisib...  \n",
-       "1   $$$$$$$$$$$$$$$$$$$$$$$$$$$$$ undefined\\nvisib...  \n",
-       "2   $$$$$$$$$$$$$$$$$$$$$$$$$$$$$ undefined\\nvisib...  \n",
-       "3   $$$$$$$$$$$$$$$$$$$$$$$$$$$$$ undefined\\nvisib...  \n",
-       "0   $$$$$$$$$$$$$$$$$$$$$$$$$$$$$ css\\nheader div ...  \n",
-       "..                                                ...  \n",
-       "0   $$$$$$$$$$$$$$$$$$$$$$$$$$$$$ javascript\\ncons...  \n",
-       "1   $$$$$$$$$$$$$$$$$$$$$$$$$$$$$ javascript\\ncons...  \n",
-       "2   $$$$$$$$$$$$$$$$$$$$$$$$$$$$$ javascript\\ncons...  \n",
-       "3   $$$$$$$$$$$$$$$$$$$$$$$$$$$$$ javascript\\ncons...  \n",
-       "4   $$$$$$$$$$$$$$$$$$$$$$$$$$$$$ javascript\\ncons...  \n",
-       "\n",
-       "[119320 rows x 9 columns]"
+       "[5055 rows x 4 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
